src/test/testData/parser/error/InVar.lama
var e := ,,,,;

if e == 15 then 1 else 2 fi;

write (42 + 42)